# Ai_visual_processing_tools

./: .gitignore  README.html  README.md  launcher.py  main.py  pyproject.toml  toolkit_launcher.py  启动工具集.bat  启动工具集.bat - 快捷方式.lnk  启动打标器.bat
.claude/: settings.json  settings.local.json
.clinerules/: principles.md
pictures_mark_tool/: image_processor.py  tagger_ui.py  testwd.py  启动打标器.bat
pictures_mark_tool/code/: ai_caption_generator.py  config copy.ini  config.ini  statistics.py  tag_management.py  ui_event_handlers.py
pictures_mark_tool/tool/: 一键生成图像同名文本文件.py  启动图片裁剪工具.bat  文件夹通用处理.py  测试ollama多图.py  视频转图片.py
pictures_mark_tool/备份打标器/: batch_pictures_processor.py  config.ini  image_processor.py  main.py  tagger_ui.py  test.py
tools/comfyui/: batch_anime2real.py  batch_image_upscale.py  wan22放大.py  提示词提取.py  插帧.py  真人转动漫.py
video_mark_tool/: .gitignore  config.ini
video_mark_tool/models/: Qwen3-VL-8B-Instruct
video_mark_tool/图像视频标签预览ui/: pic_video_label_manager.py
video_mark_tool/备份/: JoyCaption.py  README.md  video_tagger.py  视频打标备份.py  首帧提取.py
video_mark_tool/拆分视频工具/: 拆分视频5分钟.py
video_mark_tool/视频图片标签多文件夹合并为1工具/: merge_any.py  视频或图片标签放resource结果在merged启动.bat
video_mark_tool/视频打标器/: README.md  config.ini  main.py  架构详解.md  毕业设计分析文档.md  毕业设计论文.md  毕业设计论文参考.md  毕设2.md  演示讲解稿.md
video_mark_tool/视频标签编辑ui/: pic_video_label_manager.py  run.bat
video_mark_tool/调用模型测试/: qwenvl测试.py  测试vllm图片.py  测试vllm视频.py
web_ui/: run_app.py  wan22_i2v_app.py
其他/AI 应用/: lmstudio_communicate.py
其他/comfyui/: batch_anime2real.py  插帧.py  (+8 more)
格式转换/: transform.py
(+217 files in other folders)
