[project]
name = "ai-visual-processing-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.3",
    "streamlit>=1.55.0",
    "tkinterdnd2>=0.4.3",
    "websocket>=0.2.1",
    "websocket-client>=1.9.0",
    "werkzeug>=3.1.7",
]
